--- a/app/src/main/res/layout/item_karga_branch.xml
+++ b/app/src/main/res/layout/item_karga_branch.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    app:cardElevation="8dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -27,7 +28,7 @@
             app:layout_constraintTop_toBottomOf="@+id/textViewBranch"
             android:textStyle="bold"
             android:textSize="16sp"
-            android:text="Grainsmart Rice General Trias" />
+            android:text="Not set." />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/valueBranchAddress"
@@ -35,9 +36,25 @@
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/valueBranch"
-            android:textStyle="italic"
-            android:textSize="12sp"
-            android:text="Lancaster New City, General Trias, Cavite" />
+            android:textSize="12sp" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/valueBranchContact"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/valueBranchAddress"
+            android:textSize="12sp" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/valueBranchSocial"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/valueBranchContact"
+            android:textSize="12sp" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-</androidx.cardview.widget.CardView>
+</com.google.android.material.card.MaterialCardView>
