--- a/app/src/main/res/layout/item_product_card_list.xml
+++ b/app/src/main/res/layout/item_product_card_list.xml
@@ -3,9 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginStart="10dp"
-    android:layout_marginTop="10dp"
-    android:layout_marginEnd="10dp">
+    android:layout_margin="10dp">
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/cardViewList"
@@ -51,6 +49,7 @@
                 android:paddingStart="10dp"
                 android:paddingTop="10dp"
                 android:paddingEnd="10dp"
+                android:paddingBottom="10dp"
                 android:textSize="14sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -61,7 +60,6 @@
                 android:id="@+id/textViewDescription"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:paddingStart="10dp"
                 android:paddingEnd="10dp"
                 android:paddingBottom="10dp"
                 android:textSize="12sp"
