--- a/app/src/main/res/layout/item_product_pricing.xml
+++ b/app/src/main/res/layout/item_product_pricing.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginEnd="10dp"
-    android:paddingBottom="10dp"
+    android:padding="10dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView
@@ -12,15 +12,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textStyle="italic"
-        android:textSize="12sp"
+        android:textSize="14sp"
         android:layout_marginStart="12dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/imageViewAdd"
-        android:layout_width="16dp"
-        android:layout_height="16dp"
+        android:layout_width="20dp"
+        android:layout_height="wrap_content"
         app:srcCompat="@drawable/ic_add_circle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -30,18 +30,19 @@
         android:id="@+id/textViewQuantity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="10dp"
+        android:layout_marginEnd="14dp"
         app:layout_constraintEnd_toStartOf="@+id/imageViewAdd"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:textStyle="bold"
+        android:textSize="16sp"
         android:text="0"/>
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/imageViewRemove"
-        android:layout_width="16dp"
-        android:layout_height="16dp"
-        android:layout_marginEnd="10dp"
+        android:layout_width="20dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="14dp"
         app:srcCompat="@drawable/ic_remove_circle"
         app:layout_constraintEnd_toStartOf="@+id/textViewQuantity"
         app:layout_constraintTop_toTopOf="parent"
