--- a/app/src/main/res/drawable/bg_splash_screen.xml
+++ b/app/src/main/res/drawable/bg_splash_screen.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android" android:opacity="opaque">
-    <item android:drawable="@android:color/white"/>
+    <item android:drawable="@color/toolbar_background"/>
     <item
-        android:width="100dp"
-        android:height="90dp"
+        android:width="250dp"
+        android:height="80dp"
         android:gravity="center">
         <bitmap
             android:gravity="fill"
-            android:src="@drawable/img_app_logo"
+            android:src="@drawable/img_app_logo_long"
             android:mipMap="true"/>
     </item>
 </layer-list>
