--- a/app/src/main/res/layout/item_delivery_map.xml
+++ b/app/src/main/res/layout/item_delivery_map.xml
@@ -33,7 +33,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_margin="20dp">
-            <fragment
+            <androidx.fragment.app.FragmentContainerView
                 android:id="@+id/searchMapsFragment"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
