--- a/app/src/main/res/layout/item_product_card_list.xml
+++ b/app/src/main/res/layout/item_product_card_list.xml
@@ -9,7 +9,7 @@
         android:id="@+id/cardViewList"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:cardElevation="4dp"
+        app:cardElevation="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -29,9 +29,11 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 app:cardElevation="8dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginBottom="10dp"
                 app:layout_constraintEnd_toEndOf="@+id/guidelineMiddle"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textViewName"
                 app:layout_constraintBottom_toBottomOf="parent">
 
                 <ImageView
@@ -50,10 +52,10 @@
                 android:paddingTop="10dp"
                 android:paddingEnd="10dp"
                 android:paddingBottom="10dp"
-                android:textSize="14sp"
+                android:textSize="16sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="@+id/guidelineMiddle"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <com.google.android.material.textview.MaterialTextView
