--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#5d4037</color>
+    <color name="colorPrimary">#AF7867</color>
     <color name="colorPrimaryDark">#321911</color>
     <color name="colorAccent">#8b6b61</color>
 
-    <color name="toolbar_background">#FFFFFF</color>
+    <color name="toolbar_background">#000000</color>
 </resources>
