--- a/app/src/main/res/layout/item_product_detail_image.xml
+++ b/app/src/main/res/layout/item_product_detail_image.xml
@@ -10,7 +10,6 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:src="@drawable/img_bigas"/>
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
