--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -61,14 +61,13 @@
 
                 <androidx.appcompat.widget.AppCompatImageView
                     android:id="@+id/imageViewHistory"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingEnd="12dp"
-                    android:paddingStart="12dp"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:layout_marginEnd="12dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@drawable/ic_history" />
+                    app:srcCompat="@drawable/ic_basket" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
