--- a/app/src/main/res/layout/item_order_summary.xml
+++ b/app/src/main/res/layout/item_order_summary.xml
@@ -21,8 +21,7 @@
             android:scaleType="fitCenter"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:srcCompat="@drawable/img_bigas"/>
+            app:layout_constraintBottom_toBottomOf="parent" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/textViewOrderName"
