--- a/app/src/main/res/layout/item_product_card_list.xml
+++ b/app/src/main/res/layout/item_product_card_list.xml
@@ -9,7 +9,7 @@
         android:id="@+id/cardViewList"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:cardElevation="8dp"
+        app:cardElevation="4dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -72,6 +72,8 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerViewPricing"
                 android:layout_width="0dp"
+                android:layout_marginStart="14dp"
+                android:layout_marginEnd="12dp"
                 android:layout_height="match_parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/guidelineMiddle"
