--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -177,6 +177,7 @@
             android:gravity="center"
             android:background="@drawable/bg_cart_badge"
             android:text="0"
+            android:translationZ="3dp"
             android:textColor="#000"
             android:textSize="12sp"
             app:layout_constraintTop_toTopOf="@id/fabBasket"
