--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -166,7 +166,7 @@
             android:transitionName="cartProductDetailTransition"
             app:icon="@drawable/ic_basket"
             app:iconTint="#FFFFFF"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/adViewContainer"
             app:layout_constraintEnd_toEndOf="parent" />
 
         <com.google.android.material.textview.MaterialTextView
@@ -182,6 +182,16 @@
             android:textSize="12sp"
             app:layout_constraintTop_toTopOf="@id/fabBasket"
             app:layout_constraintEnd_toEndOf="@id/fabBasket"/>
+
+        <RelativeLayout
+            android:id="@+id/adViewContainer"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
+        </RelativeLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
