--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -109,6 +109,13 @@
             android:orientation="horizontal"
             app:layout_constraintGuide_percent="0.0"/>
 
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guidelineCenter"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.5"/>
+
         <androidx.core.widget.ContentLoadingProgressBar
             android:id="@+id/progressBar"
             android:layout_width="match_parent"
@@ -153,6 +160,19 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/layoutKargaBranch"/>
 
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/lottieEmptyBag"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:lottie_rawRes="@raw/empty_bag_error"
+            app:lottie_loop="true"
+            app:lottie_autoPlay="true"
+            android:visibility="gone"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" />
+
         <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
             android:id="@+id/fabBasket"
             android:layout_width="wrap_content"
@@ -185,12 +205,12 @@
 
         <RelativeLayout
             android:id="@+id/adViewContainer"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent">
+            app:layout_constraintStart_toStartOf="@+id/guidelineCenter"
+            app:layout_constraintEnd_toEndOf="@id/guidelineCenter">
         </RelativeLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
