--- a/app/src/main/res/layout/fragment_product_detail.xml
+++ b/app/src/main/res/layout/fragment_product_detail.xml
@@ -95,41 +95,64 @@
             android:id="@+id/recyclerViewProductDetails"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            app:layout_constraintBottom_toTopOf="@+id/adViewContainerDetail"
+            app:layout_constraintBottom_toTopOf="@+id/cardViewCart"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
-            android:id="@+id/fabBasket"
-            android:layout_width="wrap_content"
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/cardViewCart"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_gravity="bottom|end"
-            android:layout_margin="10dp"
-            android:visibility="gone"
-            android:backgroundTint="@color/colorPrimary"
-            android:theme="@style/Theme.MaterialComponents.NoActionBar"
-            android:transitionName="cartProductDetailTransition"
-            app:icon="@drawable/ic_basket"
-            app:iconTint="#FFFFFF"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:cardElevation="10dp"
+            app:layout_constraintBottom_toTopOf="@+id/adViewContainerDetail"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
 
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/textViewOrderBadge"
-            android:layout_width="18sp"
-            android:layout_height="18sp"
-            android:elevation="6dp"
-            android:gravity="center"
-            android:visibility="gone"
-            android:background="@drawable/bg_cart_badge"
-            android:text="0"
-            android:textColor="#000"
-            android:textSize="12sp"
-            app:layout_constraintTop_toTopOf="@id/fabBasket"
-            app:layout_constraintEnd_toEndOf="@id/fabBasket"/>
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/buttonViewCart"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
+                android:text="View Cart"
+                android:textSize="12sp"
+                android:visibility="gone" />
+
+            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+                android:id="@+id/fabBasket"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentBottom="true"
+                android:layout_gravity="center"
+                android:layout_margin="10dp"
+                android:visibility="gone"
+                app:elevation="1dp"
+                android:backgroundTint="@color/colorPrimary"
+                android:theme="@style/Theme.MaterialComponents.NoActionBar"
+                android:transitionName="cartProductDetailTransition"
+                app:icon="@drawable/ic_basket"
+                app:iconTint="#FFFFFF"
+                android:textColor="@android:color/white"
+                android:text="View cart"
+                android:textSize="10sp" />
+
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/textViewOrderBadge"
+                android:layout_width="18sp"
+                android:layout_height="18sp"
+                android:elevation="6dp"
+                android:gravity="center"
+                android:visibility="gone"
+                android:background="@drawable/bg_cart_badge"
+                android:text="0"
+                android:textColor="#000"
+                android:textSize="12sp"
+                app:layout_constraintTop_toTopOf="@id/fabBasket"
+                app:layout_constraintEnd_toEndOf="@id/fabBasket"/>
+
+        </com.google.android.material.card.MaterialCardView>
 
         <RelativeLayout
             android:id="@+id/adViewContainerDetail"
