--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#8b6b61</color>
 
     <color name="toolbar_background">#000000</color>
+    <color name="icon_toolbar_color">#FFFFFF</color>
 </resources>
