added delivery fee

--- a/app/src/main/res/layout/item_product_pricing.xml
+++ b/app/src/main/res/layout/item_product_pricing.xml
@@ -11,8 +11,20 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="14sp"
+        android:text="25 kg"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textViewStocks"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:textSize="12sp"
+        android:textStyle="italic"
+        android:textColor="#FF0000"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewProductVariation" />
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/imageViewAdd"
