--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -122,7 +122,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/layoutDeliveryAddress"
-            app:layout_constraintBottom_toTopOf="@+id/textViewPurchaseTotal">
+            app:layout_constraintBottom_toTopOf="@+id/textViewDeliveryFee">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -187,6 +187,32 @@
             app:layout_constraintEnd_toEndOf="@+id/cardViewList"
             app:layout_constraintBottom_toTopOf="@+id/cardViewCart" />
 
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/textViewDeliveryLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:textSize="12sp"
+            android:text="Delivery Fee"
+            android:textStyle="bold"
+            android:gravity="center"
+            android:visibility="gone"
+            app:layout_constraintStart_toStartOf="@+id/cardViewList"
+            app:layout_constraintTop_toTopOf="@+id/textViewDeliveryFee"
+            app:layout_constraintBottom_toBottomOf="@+id/textViewDeliveryFee"/>
+
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/textViewDeliveryFee"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:textSize="16sp"
+            android:text="0.0"
+            android:visibility="gone"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="@+id/cardViewList"
+            app:layout_constraintBottom_toTopOf="@+id/textViewPurchaseTotal" />
+
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/cardViewCart"
             android:layout_width="0dp"
@@ -200,8 +226,7 @@
                 android:id="@+id/buttonProceed"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:layout_marginEnd="20dp"
+                android:layout_margin="12dp"
                 android:text="PROCEED"
                 android:textSize="12sp" />
         </com.google.android.material.card.MaterialCardView>
@@ -214,6 +239,8 @@
             app:constraint_referenced_ids="
             textViewPurchaseTotal,
             textViewTotalLabel,
+            textViewDeliveryFee,
+            textViewDeliveryLabel,
             cardViewCart,
             cardViewList"/>
 
