--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -203,6 +203,13 @@
             app:layout_constraintTop_toTopOf="@id/fabBasket"
             app:layout_constraintEnd_toEndOf="@id/fabBasket"/>
 
+        <androidx.constraintlayout.widget.Group
+            android:id="@+id/groupCart"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            app:constraint_referenced_ids="fabBasket,textViewOrderBadge"/>
+
         <RelativeLayout
             android:id="@+id/adViewContainer"
             android:layout_width="wrap_content"
