--- a/app/src/main/res/navigation/nav_graph_main.xml
+++ b/app/src/main/res/navigation/nav_graph_main.xml
@@ -61,5 +61,14 @@
     <fragment
         android:id="@+id/profileFragment"
         android:name="com.gayyedfam.grainsmartkarga.ui.profile.ProfileFragment"
-        android:label="ProfileFragment" />
+        android:label="ProfileFragment" >
+        <action
+            android:id="@+id/action_profileFragment_to_profileMapsFragment"
+            app:destination="@id/profileMapsFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/profileMapsFragment"
+        android:name="com.gayyedfam.grainsmartkarga.ui.profile.ProfileMapsFragment"
+        android:label="fragment_profile_maps"
+        tools:layout="@layout/fragment_profile_maps" />
 </navigation>
