update libraries and sdk

--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -278,15 +278,17 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"/>
 
-        <RelativeLayout
+        <com.google.android.gms.ads.AdView
             android:id="@+id/adViewContainerCart"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
+            app:adSize="BANNER"
+            app:adUnitId="ca-app-pub-3940256099942544/6300978111"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent">
-        </RelativeLayout>
+        </com.google.android.gms.ads.AdView>
 
         <androidx.constraintlayout.widget.Group
             android:id="@+id/groupEmpty"
