--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -47,12 +47,17 @@
                     android:orientation="horizontal"
                     app:layout_constraintGuide_percent="0.6" />
 
-                <androidx.appcompat.widget.AppCompatImageView
+                <TextView
+                    android:id="@+id/txtGreeting"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/img_app_logo_long"
+                    android:text="Order na!"
+                    android:textStyle="bold|italic"
+                    android:textSize="18sp"
                     app:layout_constraintEnd_toEndOf="@+id/guidelineLogo"
                     app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toStartOf="@+id/imgLogo"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <androidx.appcompat.widget.AppCompatImageView
@@ -82,9 +87,10 @@
                     android:text="0"/>
 
                 <androidx.appcompat.widget.AppCompatImageView
+                    android:id="@+id/imgLogo"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/img_grainsmart"
+                    android:src="@drawable/img_grainsmart_aqua"
                     android:scaleType="fitCenter"
                     app:layout_constraintEnd_toEndOf="@id/guidelineBasket"
                     app:layout_constraintStart_toStartOf="@+id/guidelineBrand"
@@ -121,7 +127,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:indeterminate="true"
-            android:visibility="gone"
+            android:visibility="visible"
             android:translationZ="3dp"
             app:layout_constraintTop_toTopOf="@+id/guidelineToolbar"
             app:layout_constraintBottom_toBottomOf="@+id/guidelineToolbar"
@@ -134,7 +140,7 @@
             android:id="@+id/layoutKargaBranch"
             android:layout_height="wrap_content"
             android:layout_width="0dp"
-            android:layout_marginTop="4dp"
+            android:layout_marginTop="12dp"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
             android:layout_marginBottom="10dp"
